add script to monitor cpu and gc